--- a/src/style/base/base.css
+++ b/src/style/base/base.css
@@ -63,3 +63,6 @@ td {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   font-size: 15px;
 }
+.active-floder {
+  z-index: 2!important;
+}
