--- a/src/style/base/base.less
+++ b/src/style/base/base.less
@@ -18,3 +18,6 @@ table,caption,tbody,tfoot,thead,tr,th,td {
     font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
     font-size: 15px;
 }
+.active-floder{
+    z-index: 2!important;
+}
